<resources>
    <string name="app_name">ONG</string>
    <string name="action_settings">Settings</string>
    <string name="section_format" translatable="false">Hello World from section: %1$d</string>
    <string name="nome">Name</string>
    <string name="email">Email</string>
    <string name="telefone">Phone Number</string>
    <string name="celular">Cell Number</string>
    <string name="empresa">Company</string>
    <string name="site">Site</string>
    <string name="mensagem">Message</string>
    <string name="aviso_email">Necessary to write in all fields</string>
    <string name="enviar_email">Send mail...</string>
    <string name="erro_email">There are no email clients installed.</string>
    <string name="eventos_disponiveis">Events Available</string>
    <string name="titulo_item">Currently in need of following items:</string>
    <string name="geladeira">Refrigerator</string>
    <string name="microondas">Microwave</string>
    <string name="televisao">TV</string>
    <string name="video">Click here to start video</string>
    <string name="nota_fiscal">Make your donation as a tax benefit! Federal Public Utility Certificate Ordinance N° 2021 of 05/17/2013 Donate your credits from the Nota Fiscal Paulista. Just indicate our CNPJ in your purchases or send your coupons to one of our Units.CNPJ / MF n.08.346.099 / 0001-90</string>
    <string name="pag_seguro">Donate by PagSeguro</string>
    <string name="herdeiro">Godfather an heir</string>
    <string name="doar">Donate money</string>
    <string name="doar_item">Donate item</string>
    <string name="eventos">Events</string>
    <string name="enviar">Send</string>
    <string name="email_invalido">Invalid email</string>
    <string name="site_invalido">Invlid Site</string>
    <string name="data_evento" translatable="false">%s</string>
    <string name="titulo_evento" translatable="false">%s</string>
    <string name="titulo_item_lista" translatable="false">%s</string>
</resources>
