<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2"
        android:useDefaultMargins="true"
        tools:context="com.example.pcgravacao.ong.MainActivity">

        <TextView
            android:id="@+id/nomeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/nome"
            android:textColorHint="@color/colorAccent" />

        <EditText
            android:id="@+id/nomeEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:digits=" abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColorHint="@color/colorAccent" />

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColorHint="@color/colorAccent" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/colorAccent" />

        <TextView
            android:id="@+id/telefoneTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/telefone"
            android:textColorHint="@color/colorAccent" />

        <EditText
            android:id="@+id/telefoneEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textColorHint="@color/colorAccent" />

        <TextView
            android:id="@+id/celularTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/celular"
            android:textColorHint="@color/colorAccent" />

        <EditText
            android:id="@+id/celularEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textColorHint="@color/colorPrimary" />

        <TextView
            android:id="@+id/empresaTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/empresa"
            android:textColorHint="@color/colorPrimary" />

        <EditText
            android:id="@+id/empresaEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:digits=" abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColorHint="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/siteTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/site"
            android:textColorHint="@color/colorPrimary" />

        <EditText
            android:id="@+id/siteEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:digits=". abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColorHint="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/mensagemTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="0dp"
            android:hint="@string/mensagem"
            android:textColorHint="@color/colorAccent" />

        <EditText
            android:id="@+id/mensagemEditText"
            android:layout_width="338dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:cursorVisible="true"
            android:ems="10"
            android:inputType="textMultiLine"
            android:keepScreenOn="true"
            android:maxLines="5"
            android:textColorHint="@color/colorPrimaryDark" />

        <ImageButton
            android:id="@+id/ongImageButton"
            android:layout_width="73dp"
            android:layout_height="78dp"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:padding="0dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ong" />

        <TextView
            android:id="@+id/enviarTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="center"
            android:hint="@string/enviar"
            android:textColorHint="@color/colorPrimary" />
    </GridLayout>
</ScrollView>
