<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:orientation="horizontal"
    android:useDefaultMargins="true">

    <TextView
    android:id="@+id/tituloItemTextView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_column="0"
    android:layout_columnSpan="2"
    android:layout_weight="0.04"
    android:hint="@string/titulo_item"
    android:padding="@dimen/normal"
    android:textColorHint="@android:color/black"
    android:textSize="20dp"
    android:textStyle="bold" />

    <ImageView
        android:id="@+id/item1ImageView"
        android:layout_width="179dp"
        android:layout_height="206dp"
        android:layout_column="0"
        android:layout_gravity="left"
        android:layout_row="1"
        android:padding="@dimen/normal"
        app:srcCompat="@drawable/geladeira" />

    <TextView
        android:id="@+id/item1TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="center_horizontal"
        android:layout_row="2"
        android:hint="@string/geladeira"
        android:padding="@dimen/normal_metade"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black" />

    <ImageView
        android:id="@+id/item2ImageView"
        android:layout_width="171dp"
        android:layout_height="206dp"
        android:layout_column="1"
        android:layout_gravity="right"
        android:layout_row="1"
        android:padding="@dimen/normal"
        app:srcCompat="@drawable/microondas" />

    <TextView
        android:id="@+id/item2TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="center_horizontal"
        android:hint="@string/microondas"
        android:padding="@dimen/normal_metade"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black" />

    <ImageView
        android:id="@+id/item3ImageView"
        android:layout_width="wrap_content"
        android:layout_height="146dp"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal"
        android:layout_row="3"
        android:padding="@dimen/normal"
        app:srcCompat="@drawable/televisao" />

    <TextView
        android:id="@+id/item3TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal"
        android:layout_row="4"
        android:hint="@string/televisao"
        android:padding="@dimen/normal_metade"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black" />

    </GridLayout>
    </ScrollView>